Fixed bubble text align

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -54,6 +54,7 @@ section p {
     animation: appear 0.3s ease-out;
     color: white;
     font-weight: bold;
+    text-align: center;
 }
 
 .success-bubble {
@@ -66,4 +67,5 @@ section p {
     animation: appear 0.3s ease-out;
     color: black;
     font-weight: bold;
+    text-align: center;
 }
